Fix highest-cost and tag-name endpoints, fix locale

--- a/REST-API-Advanced/service/src/main/resources/errorMessage_en_US.properties
+++ b/REST-API-Advanced/service/src/main/resources/errorMessage_en_US.properties
@@ -2,6 +2,7 @@ message.tagInvalid=Tag is invalid
 message.tagExists=Tag already exists
 message.tagDoesntExist=Tag doesn't exist
 message.cantFindTagById=Can't find tag by id
+message.cantFindTagByUserId=Can't find tag by user id
 message.giftCertificateExists=Gift certificate already exists
 message.notFound=Can't find gift certificate by id
 message.cantUpdateGiftCertificateById=Can't update gift certificate by id
