--- a/REST-API-Advanced/service/src/main/resources/errorMessage_ru_RU.properties
+++ b/REST-API-Advanced/service/src/main/resources/errorMessage_ru_RU.properties
@@ -1,21 +1,23 @@
-message.tagInvalid=Тег недействителен
-message.tagExists=Тег уже существует
-message.tagDoesntExist=Тег не существует
-message.cantFindTagById=Не удается найти тег по id
-message.giftCertificateExists=Подарочный сертификат уже существует
-message.notFound=Не удается найти подарочный сертификат по id
-message.cantUpdateGiftCertificateById=Невозможно обновить подарочный сертификат по id
-message.cantUpdateInvalidName=Невозможно обновить информацию о подарочном сертификате, неверное имя
-message.cantUpdateInvalidDescription=Невозможно обновить информацию о подарочном сертификате, неверное описание
-message.cantUpdateInvalidPrice=Невозможно обновить информацию, цена недействительна
-message.cantUpdateInvalidDuration=Невозможно обновить информацию, недействительный срок действия
-message.giftCertificateInvalid=Недействительный подарочный сертификат
-message.cantFindUser=Не удается найти пользователя
-message.cantFindOrder=Не удается найти заказ
-message.entity.data.missing=Недостаточно данных для создания сущности
-message.besttag.price.invalid=Недействительная цена для лучшего тега
-message.certificate.description.invalid=Недействительное описание сертификата
-message.certificate.price.invalid=Недействительная цена сертификата
-message.certificate.duration.invalid=Недействительная продолжительность сертификата
-message.order.price.invalid=Недействительная цена заказа
-message.pagination.invalid=Недействительная страница или размер страницы для пагинации
+message.tagInvalid=РўРµРі РЅРµРґРµР№СЃС‚РІРёС‚РµР»РµРЅ
+message.tagExists=РўРµРі СѓР¶Рµ СЃСѓС‰РµСЃС‚РІСѓРµС‚
+message.tagDoesntExist=РўРµРі РЅРµ СЃСѓС‰РµСЃС‚РІСѓРµС‚
+message.cantFindTagById=РќРµ СѓРґР°РµС‚СЃСЏ РЅР°Р№С‚Рё С‚РµРі РїРѕ id
+message.giftCertificateExists=РџРѕРґР°СЂРѕС‡РЅС‹Р№ СЃРµСЂС‚РёС„РёРєР°С‚ СѓР¶Рµ СЃСѓС‰РµСЃС‚РІСѓРµС‚
+message.notFound=РќРµ СѓРґР°РµС‚СЃСЏ РЅР°Р№С‚Рё РїРѕРґР°СЂРѕС‡РЅС‹Р№ СЃРµСЂС‚РёС„РёРєР°С‚ РїРѕ id
+message.cantUpdateGiftCertificateById=РќРµРІРѕР·РјРѕР¶РЅРѕ РѕР±РЅРѕРІРёС‚СЊ РїРѕРґР°СЂРѕС‡РЅС‹Р№ СЃРµСЂС‚РёС„РёРєР°С‚ РїРѕ id
+message.cantUpdateInvalidName=РќРµРІРѕР·РјРѕР¶РЅРѕ РѕР±РЅРѕРІРёС‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РїРѕРґР°СЂРѕС‡РЅРѕРј СЃРµСЂС‚РёС„РёРєР°С‚Рµ, РЅРµРІРµСЂРЅРѕРµ РёРјСЏ
+message.cantUpdateInvalidDescription=РќРµРІРѕР·РјРѕР¶РЅРѕ РѕР±РЅРѕРІРёС‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РїРѕРґР°СЂРѕС‡РЅРѕРј СЃРµСЂС‚РёС„РёРєР°С‚Рµ, РЅРµРІРµСЂРЅРѕРµ РѕРїРёСЃР°РЅРёРµ
+message.cantUpdateInvalidPrice=РќРµРІРѕР·РјРѕР¶РЅРѕ РѕР±РЅРѕРІРёС‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ, С†РµРЅР° РЅРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅР°
+message.cantUpdateInvalidDuration=РќРµРІРѕР·РјРѕР¶РЅРѕ РѕР±РЅРѕРІРёС‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ, РЅРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅС‹Р№ СЃСЂРѕРє РґРµР№СЃС‚РІРёСЏ
+message.giftCertificateInvalid=РќРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅС‹Р№ РїРѕРґР°СЂРѕС‡РЅС‹Р№ СЃРµСЂС‚РёС„РёРєР°С‚
+message.cantFindUser=РќРµ СѓРґР°РµС‚СЃСЏ РЅР°Р№С‚Рё РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ
+message.cantFindOrder=РќРµ СѓРґР°РµС‚СЃСЏ РЅР°Р№С‚Рё Р·Р°РєР°Р·
+message.entity.data.missing=РќРµРґРѕСЃС‚Р°С‚РѕС‡РЅРѕ РґР°РЅРЅС‹С… РґР»СЏ СЃРѕР·РґР°РЅРёСЏ СЃСѓС‰РЅРѕСЃС‚Рё
+message.besttag.price.invalid=РќРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅР°СЏ С†РµРЅР° РґР»СЏ Р»СѓС‡С€РµРіРѕ С‚РµРіР°
+message.certificate.description.invalid=РќРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕРµ РѕРїРёСЃР°РЅРёРµ СЃРµСЂС‚РёС„РёРєР°С‚Р°
+message.certificate.price.invalid=РќРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅР°СЏ С†РµРЅР° СЃРµСЂС‚РёС„РёРєР°С‚Р°
+message.certificate.duration.invalid=РќРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅР°СЏ РїСЂРѕРґРѕР»Р¶РёС‚РµР»СЊРЅРѕСЃС‚СЊ СЃРµСЂС‚РёС„РёРєР°С‚Р°
+message.order.price.invalid=РќРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅР°СЏ С†РµРЅР° Р·Р°РєР°Р·Р°
+message.pagination.invalid=РќРµРґРµР№СЃС‚РІРёС‚РµР»СЊРЅР°СЏ СЃС‚СЂР°РЅРёС†Р° РёР»Рё СЂР°Р·РјРµСЂ СЃС‚СЂР°РЅРёС†С‹ РґР»СЏ РїР°РіРёРЅР°С†РёРё
+message.user.invalid=РќРµРїСЂР°РІРёР»СЊРЅРѕРµ РёРјСЏ
+message.cantFindTagByUserId=РќРµ СѓРґР°РµС‚СЃСЏ РЅР°Р№С‚Рё Р»СѓС‡С€РёР№ С‚РµРі РїРѕ id РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ
