Fix lombok annotations, refactor services, fix naming messages, fix naming of endpoints path variables

--- a/REST-API-Advanced/service/src/main/resources/errorMessage_en_US.properties
+++ b/REST-API-Advanced/service/src/main/resources/errorMessage_en_US.properties
@@ -1,10 +1,10 @@
-message.tagInvalid=Tag is invalid
-message.tagExists=Tag already exists
-message.tagDoesntExist=Tag doesn't exist
-message.cantFindTagByUserId=Can't find tag by user id
-message.notFound=Can't find gift certificate by id
-message.cantFindUser=Can't find user by id
-message.cantFindOrder=Can't find order
+message.tag.invalid=Tag is invalid
+message.tag.existent=Tag already exists
+message.tag.nonexistent=Tag doesn't exist
+message.tag.missing=Can't find tag by user id
+message.certificate.missing=Can't find gift certificate by id
+message.user.missing=Can't find user by id
+message.order.missing=Can't find order by id
 message.entity.data.missing=Not enough data to build entity
 message.certificate.description.invalid=Invalid certificate description
 message.certificate.price.invalid=Invalid certificate price
