--- a/REST-API-Advanced/service/src/main/resources/errorMessage_ru_RU.properties
+++ b/REST-API-Advanced/service/src/main/resources/errorMessage_ru_RU.properties
@@ -1,9 +1,9 @@
-message.tagInvalid=Тег недействителен
-message.tagExists=Тег уже существует
-message.tagDoesntExist=Тег не существует
-message.notFound=Не удается найти подарочный сертификат по id
-message.cantFindUser=Не удается найти пользователя
-message.cantFindOrder=Не удается найти заказ
+message.tag.invalid=Тег недействителен
+message.tag.existent=Тег уже существует
+message.tag.nonexistent=Тег не существует
+message.certificate.missing=Не удается найти подарочный сертификат по id
+message.user.missing=Не удается найти пользователя
+message.order.missing=Не удается найти заказ
 message.entity.data.missing=Недостаточно данных для создания сущности
 message.certificate.description.invalid=Недействительное описание сертификата
 message.certificate.price.invalid=Недействительная цена сертификата
@@ -11,4 +11,4 @@ message.certificate.duration.invalid=Недействительная продо
 message.order.price.invalid=Недействительная цена заказа
 message.pagination.invalid=Недействительная страница или размер страницы для пагинации
 message.user.invalid=Неправильное имя
-message.cantFindTagByUserId=Не удается найти лучший тег по id пользователя
+message.tag.missing=Не удается найти лучший тег по id пользователя
