Add pagination info for HATEOAS

--- a/REST-API-Advanced/service/src/main/resources/errorMessage_en_US.properties
+++ b/REST-API-Advanced/service/src/main/resources/errorMessage_en_US.properties
@@ -12,3 +12,4 @@ message.certificate.duration.invalid=Invalid certificate duration
 message.order.price.invalid=Invalid order price
 message.pagination.invalid=Pagination invalid
 message.user.invalid=Invalid name
+message.validation.fail=Invalid data
