--- a/REST-API-Advanced/service/src/main/resources/errorMessage_ru_RU.properties
+++ b/REST-API-Advanced/service/src/main/resources/errorMessage_ru_RU.properties
@@ -12,3 +12,4 @@ message.order.price.invalid=Недействительная цена заказ
 message.pagination.invalid=Недействительная страница или размер страницы для пагинации
 message.user.invalid=Неправильное имя
 message.tag.missing=Не удается найти лучший тег по id пользователя
+message.validation.fail=Не корректные данные
