--- a/REST-API-Security/service/src/main/resources/errorMessage_en_US.properties
+++ b/REST-API-Security/service/src/main/resources/errorMessage_en_US.properties
@@ -22,3 +22,4 @@ message.jwt.invalid=JWT token is invalid
 message.jwt.expired=JWT token is expired
 message.super.mistake=Something went completely wrong
 message.wrong.user.order=Can't create order for another user
+message.forbidden=Forbidden
