--- a/REST-API-Security/service/src/main/resources/errorMessage_ru_RU.properties
+++ b/REST-API-Security/service/src/main/resources/errorMessage_ru_RU.properties
@@ -22,4 +22,5 @@ message.jwt.invalid=Jwt токен недействителен
 message.super.mistake=Что-то пошло не так
 message.wrong.user.order=Нельзя создать заказ для другого пользователя
 message.jwt.expired=Срок действия токена истек
+message.forbidden=Доступ запрещен
 
