Fix Tag and GiftCertificate remove, Fix authentification, Fix OrderController

--- a/REST-API-Security/service/src/main/resources/errorMessage_en_US.properties
+++ b/REST-API-Security/service/src/main/resources/errorMessage_en_US.properties
@@ -6,6 +6,7 @@ message.certificate.missing=Can't find gift certificate by id
 message.user.missing=Can't find user
 message.order.missing=Can't find order by id
 message.user.existent=User already exists
+message.certificate.existent=Gift certificate already exists
 message.entity.data.missing=Not enough data to build entity
 message.certificate.description.invalid=Invalid certificate description
 message.certificate.price.invalid=Invalid certificate price
@@ -23,3 +24,5 @@ message.jwt.expired=JWT token is expired
 message.super.mistake=Something went completely wrong
 message.wrong.user.order=Can't create order for another user
 message.forbidden=Forbidden
+message.badCredentials=Bad Credentials
+message.email.invalid=Invalid email
