--- a/REST-API-Security/service/src/main/resources/errorMessage_ru_RU.properties
+++ b/REST-API-Security/service/src/main/resources/errorMessage_ru_RU.properties
@@ -23,4 +23,7 @@ message.super.mistake=Что-то пошло не так
 message.wrong.user.order=Нельзя создать заказ для другого пользователя
 message.jwt.expired=Срок действия токена истек
 message.forbidden=Доступ запрещен
+message.badCredentials=Неверные учетные данные пользователя
+message.certificate.existent=Сертификат уже существует
+message.email.invalid=Некорректный email
 
